[package]
edition = "2024"
name = "ffwheel"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
#rust-version = "stable"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.1" }
usbd-hid = "0.9.0"

defmt = "1.0"
defmt-rtt = "1.1"


cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = "0.9"

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

static_cell = "2"
portable-atomic = { version = "1.13", features = ["critical-section"] }

[profile.release]
debug = 2

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "ffwheel"
test = false
bench = false
