[package]
edition = "2024"
name = "ffwheel"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
#rust-version = "stable"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.1" }
usbd-hid = "0.9.0"

defmt = "1.0"
defmt-rtt = "1.1"


cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = { version = "0.9", features = ["defmt"] }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

static_cell = "2"
portable-atomic = { version = "1.13", features = ["critical-section"] }
crc = "3.4.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "ffwheel"
test = false
bench = false
